--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -18,6 +18,7 @@
     "db:setup": "pnpm db:up && pnpm db:migrate:dev",
     "db:start": "pnpm db:setup",
     "go": "pnpm db:setup",
+    "db:down": "docker-compose down",
     "format": "prisma format",
     "generate": "prisma generate",
     "lint": "eslint ./src --fix",
