--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -21,6 +21,7 @@ tasks:
     init: |
       gp sync-await init-install && 
       bash .gitpod/setup-web.bash &&
+      gp sync-await db-setup-init && 
       turbo --filter "@formbricks/database" db:down
     command: |
       gp sync-await init && 
