start db only after it's closed and not midway

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -14,6 +14,7 @@ tasks:
       gp sync-done db-setup-init
     command: |
       gp sync-await init && 
+      gp sync-done db-closed && 
       turbo --filter "@formbricks/database" go &&
       gp sync-done db-started
 
@@ -24,6 +25,7 @@ tasks:
       gp sync-await db-setup-init && 
       turbo --filter "@formbricks/database" db:down
     command: |
+      gp sync-done db-closed 
       gp sync-await init && 
       gp sync-await db-started &&
       turbo --filter "@formbricks/web" go
